# Drift_Triage_CoPilot

./: .dockerignore  .env.example  .gitignore  ARCH.md  Decisions.md  Dockerfile  PROJECT_FLOW.md  README.md  RUNBOOK.md  STUDY_GUIDE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
agent/: main.py
agent/approval/: __init__.py  approval_client.py
agent/dashboard/: api_client.py  app.py
agent/dispatch/: queue_dispatcher.py
agent/integration/: __init__.py  investigation_runner.py
agent/schemas/: drift_event.py
agent/storage/: investigation_store.py
approvals/: __init__.py  approval_models.py  approval_service.py  approval_store.py
artifacts/model_cards/: bank_marketing_model_card.md
artifacts/models/: bank_marketing_pipeline.joblib
async_queue/: __init__.py  dlq.py  idempotency.py  job_models.py  producer.py  redis_client.py  status.py  tasks.py  worker.py
contracts/: drift_event.v1.json
dashboard/: __init__.py  api_client.py  app.py
data/: drift_state.json  predictions.jsonl  test_drift_state.json
data/processed/: test.csv  (+2 more)
model_artifacts/: bank_marketing_pipeline.joblib  model_card.json  model_metadata.json  model_schema.json
scripts/: fetch_data.py  generate_predictions.py  make_splits.py  simulate_drift.py  train_register_model.py
service/: main.py
test results/: train_clean.csv
test_results/: test_clean.csv  val_clean.csv
tests/: conftest.py  test_approvals.py  test_imports.py  test_queue_models.py  test_request_schema.py  test_worker.py
(+179 files in other folders)
