[project]
name = "drift-triage-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "kaggle>=2.1.0",
    "kagglehub>=1.0.1",
    "langchain-core>=1.3.3",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "mlflow>=3.12.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
